<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TileGameActivity!</string>
    <string name="app_name">TileGame</string>
    <string name="user">User: </string>
    <string name="password">Password: </string>
    <string name="login">Login</string>
    <string name="newUser">New User</string>
    <string name="quit">Quit</string>
    <string name="gamesMenu">Games Menu</string>
    <string name="gameBoard">Game Board</string>
    <string name="userName">User Name</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="newGame">New Game </string>

</resources>